fixed button spacing on small screens

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
 .jumbotron {
   background-color: rgba(5,0,46,0.9);
   border:4px solid rgb(91,192,222);
-
+  overflow:hidden;
   max-width: 600px;
   margin: 0 auto;
   border-radius: 10px;
@@ -33,4 +33,20 @@ h1{
 
 #mytext {
   color:white;
+}
+
+@media only screen and (max-width: 400px) {
+#button2 {
+  float:none !important;
+}
+.jumbotron{
+  text-align: center;
+}
+
+#button1 {
+margin-bottom:10px;
+}
+#button2 {
+  margin-bottom:10px;
+  }
 }
